Add images endpoint
